# FaceDetection-AttendanceSystem

./: .gitignore  LEARN.md  LICENCE  README.md  dataset.py  main.py  my.kv  pyproject.toml  recognizer.py  requirements.txt  test.py  trainer.py
Attendance/: Attendance.csv  User_7.txt
list/: students.csv  test.py
