[tool.poetry]
name = "facedetection-attendancesystem"
version = "0.1.0"
description = "An attendance system using Face Recognition feature using OpenCV library of Python"
authors = ["Aryan Raj <aryaraj132@gmail.com>"]
readme = "README.md"
packages = [{include = "facedetection_attendancesystem"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.6.0.66"
numpy = "^1.23.3"
Pillow = "^9.2.0"
Kivy = "^2.1.0"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
